# ogre

./: .clang-format  .codedocs  .gitignore  CMakeLists.txt  CMakeLists.txt.bak  Makefile  export.h  log  todo.sh
CMake/: ConfigureBuild.cmake  OgreFeatureSummary.cmake  PrepareThreadingOptions.cmake
CMake/Templates/: OGREConfig.cmake.in  OgreBuildSettings.h.in  html.cfg.in
Components/: CMakeLists.txt
Components/Bites/: CMakeLists.txt
Components/Bites/include/: OgreApplicationContext.h  OgreApplicationContextBase.h  OgreCameraMan.h  OgreTrays.h  OgreWindowEventUtilities.h
Components/Bites/misc/: OgreWin32Resources.rc
Components/Bites/src/: OgreAdvancedRenderControls.cpp  OgreApplicationContextAndroid.cpp  OgreApplicationContextBase.cpp  OgreApplicationContextSDL.cpp  OgreCameraMan.cpp  OgreGLXConfigDialog.cpp  OgreOSXConfigDialog.mm  OgreSGTechniqueResolverListener.cpp  OgreStaticPluginLoader.cpp  OgreTrays.cpp  OgreWIN32ConfigDialog.cpp  OgreWindowEventUtilities.cpp
Components/Bullet/include/: OgreBullet.h
Components/Bullet/src/: OgreBullet.cpp
Components/MeshLodGenerator/: CMakeLists.txt.bak
Components/MeshLodGenerator/include/: OgreLod0Stripifier.h  OgreLodCollapseCostOutside.h  OgreLodCollapseCostProfiler.h  OgreLodCollapseCostQuadric.h  OgreLodCollapser.h  OgreLodConfig.h  OgreLodConfigSerializer.h  OgreLodData.h  OgreLodOutsideMarker.h  OgreMeshLodGenerator.h  OgreVectorSetImpl.h
Components/MeshLodGenerator/src/: OgreLodBuffer.cpp  OgreLodBuffer.h  OgreLodCollapseCost.cpp  OgreLodCollapseCostCurvature.cpp  OgreLodCollapseCostQuadric.cpp  OgreLodConfig.cpp  OgreLodConfigSerializer.cpp  OgreLodInputProvider.cpp  OgreLodInputProviderBuffer.cpp  OgreLodInputProviderBuffer.h  OgreLodInputProviderMesh.cpp  OgreLodInputProviderMesh.h  OgreLodOutputProviderBuffer.cpp  OgreLodOutputProviderBuffer.h  OgreLodOutputProviderMesh.h  OgreLodOutsideMarker.cpp  OgreMeshLodGenerator.cpp  OgreMeshLodPrecompiledHeaders.h
Components/Overlay/: CMakeLists.txt
Components/Overlay/include/: OgreFont.h  OgreFontManager.h  OgreOverlay.h  OgreOverlayContainer.h  OgreOverlayElement.h  OgreOverlayManager.h  OgreOverlaySystem.h  OgreTextAreaOverlayElement.h  font.h  font_manager.h
Components/Overlay/src/: OgreBorderPanelOverlayElement.cpp  OgreFont.cpp  OgreFontManager.cpp  font.cpp  (+15 more)
Components/RTShaderSystem/: CMakeLists.txt
Docs/: 1.12-Notes.md  14-Notes.md
Docs/src/: ogre-shadows.md
Example/: CMakeLists.txt  main.cpp
Media/RTShaderLib/: FFPLib_Texturing.glsl
OgreMain/: CMakeLists.txt
OgreMain/include/: Ogre.h  Ogre.i  OgreAnimable.h  OgreAnimation.h  OgreAnimationState.h  OgreAnimationTrack.h  OgreArchive.h  OgreArchiveFactory.h  OgreArchiveManager.h  OgreAutoParamDataSource.h  OgreAxisAlignedBox.h  OgreBillboard.h  OgreBillboardChain.h  OgreBillboardParticleRenderer.h  OgreBillboardSet.h  OgreBlendMode.h  OgreBone.h  OgreCamera.h  OgreCodec.h  OgreCommon.h  OgreCompositionPass.h  OgreCompositionTargetPass.h  OgreCompositionTechnique.h  OgreCompositor.h  OgreCompositorChain.h  OgreCompositorInstance.h  OgreCompositorManager.h  OgreConfigFile.h  OgreConfigOptionMap.h  OgreController.h  OgreControllerManager.h  OgreConvexBody.h  OgreDataStream.h  OgreDefaultDebugDrawer.h  OgreDefaultHardwareBufferManager.h  OgreDefaultWorkQueue.h  OgreDeflate.h  OgreDepthBuffer.h  OgreDistanceLodStrategy.h  OgreDynLib.h  (+167 more)
OgreMain/src/: OgreASTCCodec.cpp  OgreASTCCodec.h  OgreAlignedAllocator.cpp  OgreAnimable.cpp  OgreAnimation.cpp  OgreAnimationState.cpp  OgreAnimationTrack.cpp  OgreArchive.cpp  OgreArchiveManager.cpp  OgreAutoParamDataSource.cpp  OgreAxisAlignedBox.cpp  OgreBillboard.cpp  OgreBillboardChain.cpp  OgreBillboardParticleRenderer.cpp  OgreBillboardSet.cpp  OgreBone.cpp  OgreBuiltinMovableFactories.h  OgreBuiltinScriptTranslators.h  OgreCamera.cpp  OgreCodec.cpp  OgreColourValue.cpp  OgreCommon.cpp  OgreCompositionPass.cpp  OgreCompositionTargetPass.cpp  OgreCompositionTechnique.cpp  OgreCompositor.cpp  OgreCompositorChain.cpp  OgreCompositorInstance.cpp  OgreCompositorManager.cpp  OgreConfigFile.cpp  OgreControllerManager.cpp  OgreConvexBody.cpp  OgreDDSCodec.cpp  OgreDDSCodec.h  OgreDataStream.cpp  OgreDefaultDebugDrawer.cpp  OgreDefaultHardwareBufferManager.cpp  OgreDefaultSceneQueries.cpp  OgreDefaultWorkQueueStandard.cpp  OgreDeflate.cpp  (+187 more)
PlugIns/DotScene/: README.md
RenderSystems/Direct3D11/: CMakeLists.txt
RenderSystems/Direct3D9/: CMakeLists.txt
RenderSystems/GLES2/: CMakeLists.txt
RenderSystems/Metal/: CMakeLists.txt
Samples/: CMakeLists.txt
Samples/Emscripten/: Context.cpp  Main.cpp
Samples/HelloOgre/: CMakeLists.txt  main.cpp
Samples/Python/: numpy_sample.ipynb  numpy_sample.py  opencv_aruco.py  raw_sample.py  sample.py
Tests/Components/: MeshLodTests.cpp  PageCoreTests.cpp  TerrainTests.cpp
Tests/src/: main.cpp
Tools/AssimpConverter/: main.cpp
UnitTest/: CMakeLists.txt  test_archive.cpp  test_string.cpp
cmake/: build_deps.cmake  cxx_project.cmake  warning_as_error.cmake
main/: CMakeLists.txt
main/include/: OgreCommon.h
main/include/hyue/: Any.h  Archive.h  ArchiveFactory.h  ArchiveManager.h  Bitwise.h  Box.h  Color.h  DataStream.h  DynLib.h  FactoryObj.h  FileSystemArchiveFactory.h  PixelFormat.h  Root.h  SharedPtr.h  Singleton.h  String.h  StringUtils.h  ZipArchiveFactory.h  endian.h  exception.h  log.h  math.h  panic.h  thread.h  type.h
main/src/: Any.cpp  Archive.cpp  ArchiveFactory.cpp  ArchiveManager.cpp  Color.cpp  DataStream.cpp  DynLib.cpp  FileSystemArchiveFactory.cpp  OgreArchive.cpp  OgreFileSystem.cpp  OgreRootRenderSceneScope.cpp  OgreSceneManager.cpp  OgreZip.cpp  PixelFormat.cpp  PixelFormatDescription.h  Root.cpp  SharedPtr.cpp  Singleton.cpp  String.cpp  StringUtils.cpp  ZipArchiveFactory.cpp  init_logging.h  log.cpp  pixel_conversion.h  pixel_conversion.inl  thread.cpp
niu2x-RPG/: CMakeLists.txt
niu2x-RPG/lua-5.3/: CMakeLists.txt
niu2x-RPG/src/: main.cpp
unittest/: CMakeLists.txt  test_archive.cpp  test_bitwise.cpp  test_string.cpp
(+743 files in other folders)
